2007-04-20  Matthias Miller  <matthiasmiller@users.sourceforge.net>
  * include/wincrypt.h (CRYPTPROTECT_PROMPTSTRUCT, CRYPTPROTECT_UI_FORBIDDEN,
  CRYPTPROTECT_LOCAL_MACHINE): Define.

2007-04-15  Piotr Wyderski  <piotr.wyderski@wp.pl>

	* include/winbase.h (SetInformationJobObject, QueryInformationJobObject):
	Define.

2007-03-30  Brian Dessent  <brian@dessent.net>

	* lib/kernel32.def (CreateMemoryResourceNotification@4): Define.

2007-03-25  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.9.
	* Makefile.in: Ditto.

2007-03-23  Corinna Vinschen  <corinna@vinschen.de>

	* include/psapi.h (GetMappedFileName): Fix messed up checkin.

2007-03-23  Matthew Gregan  <kinetik@flim.org>

	* include/psapi.h (GetMappedFileName): Rename from GetMappedFilenameEx.

2007-03-06  Brandon Sneed <brandon@oqo.com>

	* include/setupapi.h: Added SetupConfigureWmiFromInfSectionA
	Added SetupConfigureWmiFromInfSectionW
	Added SetupConfigureWmiFromInfSection define to unicode and non-unicode sections

	* lib/setupapi.def: Added exports for SetupConfigureWmiFromInfSectionA and W

	* include/winuser.h: Added PBT_APMQUERYSUSPEND
	Added PBT_APMQUERYSTANDBY
	Added PBT_APMQUERYSUSPENDFAILED
	Added PBT_APMQUERYSTANDBYFAILED
	Added PBT_APMSUSPEND
	Added PBT_APMSTANDBY
	Added PBT_APMRESUMECRITICAL
	Added PBT_APMRESUMESUSPEND
	Added PBT_APMRESUMESTANDBY
	Added PBT_APMBATTERYLOW
	Added PBT_APMPOWERSTATUSCHANGE
	Added PBT_APMOEMEVENT
	Added PBT_APMRESUMEAUTOMATIC

	* include/wtsapi32.h: New file

	* include/wingdi.h: Added DM_DISPLAYORIENTATION define for use with DMDO_* defines

2007-03-05  Jan Nijtmans  <nijtmans@users.sourceforge.net>

	* include/ddeml.h (DdeCreateStringHandleA, DdeCreateStringHandleW): Switch
	argument to constant.

2007-02-18  Jiri Malak  <jiri.malak@iol.cz>

	* include/windef.h [WATCOM]: Fix !NONAMELESSUNION defines.
	* include/winnt.h [WATCOM] (GetCurrentFiber, GetFiberData):
	Add prototypes.