@@ -151,54 +151,60 @@ typedef struct _AppBarData {
 DECLARE_HANDLE(HDROP);
 
 typedef struct _NOTIFYICONDATAA {
-	DWORD cbSize;
-	HWND hWnd;
-	UINT uID;
-	UINT uFlags;
-	UINT uCallbackMessage;
-	HICON hIcon;
+  DWORD cbSize;
+  HWND hWnd;
+  UINT uID;
+  UINT uFlags;
+  UINT uCallbackMessage;
+  HICON hIcon;
 #if _WIN32_IE >= 0x0500
-	CHAR szTip[128];
-	DWORD dwState;
-	DWORD dwStateMask;
-	CHAR szInfo[256];
-	_ANONYMOUS_UNION union {
-		UINT uTimeout;
-		UINT uVersion;
-	} DUMMYUNIONNAME;
-	CHAR szInfoTitle[64];
-	DWORD dwInfoFlags;
+  CHAR szTip[128];
+  DWORD dwState;
+  DWORD dwStateMask;
+  CHAR szInfo[256];
+  _ANONYMOUS_UNION union {
+    UINT uTimeout;
+    UINT uVersion;
+  } DUMMYUNIONNAME;
+  CHAR szInfoTitle[64];
+  DWORD dwInfoFlags;
 #else
-	CHAR szTip[64];
+  CHAR szTip[64];
 #endif
 #if _WIN32_IE >= 0x600
-	GUID guidItem;
+  GUID guidItem;
+#endif
+#if _WIN32_WINNT >= 0x600
+  HICON hBalloonIcon;
 #endif
 } NOTIFYICONDATAA,*PNOTIFYICONDATAA;
 
 typedef struct _NOTIFYICONDATAW {
-	DWORD cbSize;
-	HWND hWnd;
-	UINT uID;
-	UINT uFlags;
-	UINT uCallbackMessage;
-	HICON hIcon;
+  DWORD cbSize;
+  HWND hWnd;
+  UINT uID;
+  UINT uFlags;
+  UINT uCallbackMessage;
+  HICON hIcon;
 #if _WIN32_IE >= 0x0500
-	WCHAR szTip[128];
-	DWORD dwState;
-	DWORD dwStateMask;
-	WCHAR szInfo[256];
-	_ANONYMOUS_UNION union {
-		UINT uTimeout;
-		UINT uVersion;
-	} DUMMYUNIONNAME;
-	WCHAR szInfoTitle[64];
-	DWORD dwInfoFlags;
+  WCHAR szTip[128];
+  DWORD dwState;
+  DWORD dwStateMask;
+  WCHAR szInfo[256];
+  _ANONYMOUS_UNION union {
+    UINT uTimeout;
+    UINT uVersion;
+  } DUMMYUNIONNAME;
+  WCHAR szInfoTitle[64];
+  DWORD dwInfoFlags;
 #else
-	WCHAR szTip[64];
+  WCHAR szTip[64];
 #endif
 #if _WIN32_IE >= 0x600
-	GUID guidItem;
+  GUID guidItem;
+#endif
+#if _WIN32_WINNT >= 0x600
+  HICON hBalloonIcon;
 #endif
 } NOTIFYICONDATAW,*PNOTIFYICONDATAW;
 
