@@ -1,6 +1,12 @@
+2007-04-22  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
+
+	* include/shellapi.h (NOTIFYICONDATAA, NOTIFYICONDATAW): Updated to support
+	Vista.
+
 2007-04-20  Matthias Miller  <matthiasmiller@users.sourceforge.net>
-  * include/wincrypt.h (CRYPTPROTECT_PROMPTSTRUCT, CRYPTPROTECT_UI_FORBIDDEN,
-  CRYPTPROTECT_LOCAL_MACHINE): Define.
+
+	 * include/wincrypt.h (CRYPTPROTECT_PROMPTSTRUCT, CRYPTPROTECT_UI_FORBIDDEN,
+	CRYPTPROTECT_LOCAL_MACHINE): Define.
 
 2007-04-15  Piotr Wyderski  <piotr.wyderski@wp.pl>
 
